2006-07-27

	* libsylph/md5_hmac.c: md5_hex_hmac(): fixed a memory leak.

2006-07-26

	* src/compose.c: compose_reply_set_entry(): use original address
	  strings instead of stripped ones. Fixed a bug that To: address
	  was duplicated in Cc: on reply-to-all.

2006-07-25

	* libsylph/prefs_common.[ch]
	  src/inc.c
	  src/prefs_common_dialog.c: added an option to filter junk mails
	  before normal filtering.

2006-07-24

	* src/summaryview.c: added 'Set as (not) junk mail' to the context
	  menu.

2006-07-21

	* src/summaryview.c: summary_filter_real(): fixed a bug that manual
	  junk filtering didn't work when no filter rule exist.

2006-06-27

	* po/tr.po: fixed a typo which caused crash.

2006-06-26

	* src/gtkutils.[ch]: gtkut_tree_view_fast_clear(): new.
	* src/summaryview.c: made workarounds for the crash in GTK+ 2.8.x.

2006-06-25

	* libsylph/mh.c: mh_scan_tree_recursive(): win32: improved its
	  performance.
	  Don't scan virtual folders.

2006-06-25

	* src/summaryview.c: summary_execute_move(), summary_execute_copy():
	  removed redundant folder scan.
	* libsylph/mh.c: mh_scan_folder_full(): win32: supported non-unicode
	  platforms (not tested).

2006-06-23

	* libsylph/mh.c: mh_scan_folder_full(): win32: optimized scanning of
	  directory using FindFirstFile() / FindNextFile().

2006-06-16

	* src/folderview.c: folderview_menu_popup(): enable "Mark all read"
	  only when selected folder is opened in the case of IMAP4.

2006-06-16

	* libsylph/procmsg.[ch]
	  src/folderview.c: added "Mark all read" to the folder context menu.

2006-06-09

	* version 2.2.6

2006-06-08

	* src/textview.c: textview_write_link(): remove spaces from href
	  (fixes execution failure with ShellExecute() on Win32 and URI check).

2006-06-04

	* src/send_message.c: send_message_smtp(): added missing timeout
	  handling (thanks to Colin).

2006-06-01

	* libsylph/imap.c: support 8-bit literal (literal8) defined in RFC
	  3516.

2006-05-29

	* version 2.2.5

2006-05-26
