@@ -1,3 +1,10 @@
+2006-07-28
+
+	* src/compose.c
+	  src/messageview.c
+	  src/prefs_common_dialog.c
+	  src/mainwindow.c: added Windows-1257 encoding for Baltic.
+
 2006-07-27
 
 	* libsylph/md5_hmac.c: md5_hex_hmac(): fixed a memory leak.
